--- a/package.json
+++ b/package.json
@@ -2,5 +2,22 @@
   "dependencies": {
     "express": "^4.18.1",
     "i": "^0.3.7"
-  }
+  },
+  "name": "expressnotetaker",
+  "description": "Note Taker that can be used to write and save notes. This application will use an Express.js back end and will save and retrieve note data from a JSON file",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/coleyrockin/ExpressNoteTaker.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/coleyrockin/ExpressNoteTaker/issues"
+  },
+  "homepage": "https://github.com/coleyrockin/ExpressNoteTaker#readme"
 }
